--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,18 @@ info:
     properties:
       java:
         version: '@java.version@'
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 
 spring:
   security:
@@ -18,12 +30,10 @@ spring:
       password: admin
 
   datasource:
-    #url: jdbc:h2:file:/data/demo
     url: jdbc:h2:mem:admservice
     username: sa
     password:
     driverClassName: org.h2.Driver
-
 
   h2:
     console:
@@ -36,3 +46,10 @@ spring:
       ddl-auto: create-drop
       show-sql: true
 
+  sql:
+    init:
+      mode: never
+
+server:
+  error:
+    include-message: always
